[package]
name = "enclave-runtime"
version = "0.8.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2018"
resolver = "2"

[workspace]
members = []

[lib]
name = "enclave_runtime"
crate-type = ["staticlib"]

[features]
default = []
production = ['itp-settings/production']
test = ['ita-stf/test', 'itp-storage/test']

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tse = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"] }
sgx_rand = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize_derive = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx-crypto-helper = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", package = "sgx_tcrypto_helper" }

[dependencies]
codec  = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
primitive-types  = { version = "0.10.1", default-features = false, features = ["codec", "serde_no_std"] }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
retain_mut = { version = "0.1.2"}
derive_more = { version = "0.99.5" }
byteorder = { version = "1.4.2", default-features = false }
arrayvec = { version = "0.7.1", default-features = false }
hex = { version = "0.4.3", default-features = false }
ipfs-unixfs = { default-features = false, git = "https://github.com/whalelephant/rust-ipfs", branch = "w-nstd" }

# scs / integritee
sp-io = { default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"], git = "https://github.com/integritee-network/sgx-runtime", branch = "master", optional = true}
substrate-api-client = { default-features = false, git = "https://github.com/scs/substrate-api-client", branch = "master" }
sgx-externalities = { default-features = false, git = "https://github.com/integritee-network/sgx-runtime", branch = "master" }
jsonrpc-core = { default-features = false, git = "https://github.com/scs/jsonrpc", branch = "no_std" }

# mesalock
linked-hash-map = { git = "https://github.com/mesalock-linux/linked-hash-map-sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
log = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
serde = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/serde-json-sgx" }
yasna = { rev = "sgx_1.1.3", default-features = false, features = ["bit-vec", "num-bigint", "chrono", "mesalock_sgx"], git = "https://github.com/mesalock-linux/yasna.rs-sgx" }
rustls = { rev = "sgx_1.1.3", features = ["dangerous_configuration"], git = "https://github.com/mesalock-linux/rustls" }

# for attestation
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
base64 = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rust-base64-sgx" }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
httparse = { version = "1.3",  default-features = false }
itertools = { version = "0.10.1",  default-features = false, features = []}
bit-vec = { version = "0.6",    default-features = false }
base58 = { rev = "sgx_1.1.3", package="rust-base58", git = "https://github.com/mesalock-linux/rust-base58-sgx", default-features = false, features=["mesalock_sgx"] }

cid = { git = "https://github.com/whalelephant/rust-cid", branch = "nstd", default-features = false }
multibase = { git = "https://github.com/whalelephant/rust-multibase", branch = "nstd", default-features = false }

# local deps
itc-light-client = { path = "../core/light-client", default-features = false, features = ["sgx"] }
itp-teerex-storage = { path = "../primitives/teerex-storage", default-features = false }
itp-storage-verifier = { path = "../primitives/storage-verified", default-features = false }
itp-sgx-crypto= { path = "../primitives/sgx/crypto", default-features = false,  features = ["sgx"] }
itp-types = {path = "../primitives/types", default-features = false, features = ["sgx"] }
itp-ocall-api = { path = "../primitives/ocall-api", default-features = false }
itp-settings = { path = "../primitives/settings" }
itp-sgx-io = { path = "../primitives/sgx/io", default-features = false, features = ["sgx"] }
its-sidechain = { path = "../sidechain", default-features = false }
its-primitives = { path = "../sidechain/primitives", default-features = false }
ita-stf = { path = "../app-libs/stf", default-features = false, features = ["sgx"] }
itp-storage = { path = "../primitives/storage", default-features = false, features = ["sgx"] }
itp-core= {path = "../primitives/core", default-features = false }
itp-test = { path = "../primitives/test", default-features = false, features = ["sgx"] }

# substrate deps
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { version = "4.0.0-dev", default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-finality-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-utils = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-version = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-application-crypto = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }


[patch.crates-io]
log = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", default-features = false, features = ["mesalock_sgx"] }
getrandom = { git = "https://github.com/integritee-network/getrandom-sgx", branch = "update-v2.3", features = ["mesalock_sgx"] }

[patch."https://github.com/paritytech/substrate"]
log = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", default-features = false, features = ["mesalock_sgx"] }
sp-io = { git = "https://github.com/integritee-network/sgx-runtime", branch = "master", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}