[package]
name = "enclave-runtime"
version = "0.8.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2018"
resolver = "2"

[workspace]
members = []

[lib]
name = "enclave_runtime"
crate-type = ["staticlib"]

[features]
default = []
production = ["itp-settings/production"]
test = [
    "ita-stf/test",
    "itc-parentchain/mocks",
    "itp-extrinsics-factory/mocks",
    "itp-sgx-crypto/mocks",
    "itp-stf-executor/test",
    "itp-stf-state-handler/test",
    "itp-storage/test",
    "itp-test/sgx",
    "its-sidechain/test",
]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tse = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"] }
sgx_rand = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize_derive = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx-crypto-helper = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", package = "sgx_tcrypto_helper" }

[dependencies]
codec  = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
primitive-types  = { version = "0.11.1", default-features = false, features = ["codec", "serde_no_std"] }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
retain_mut = { version = "0.1.2"}
derive_more = { version = "0.99.5" }
byteorder = { version = "1.4.2", default-features = false }
arrayvec = { version = "0.7.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
ipfs-unixfs = { default-features = false, git = "https://github.com/whalelephant/rust-ipfs", branch = "w-nstd" }

# scs / integritee
jsonrpc-core = { default-features = false, git = "https://github.com/scs/jsonrpc", branch = "no_std" }
sgx-externalities = { default-features = false, git = "https://github.com/integritee-network/sgx-runtime", branch = "master", features = ["sgx"] }
sgx-runtime = { default-features = false, git = "https://github.com/integritee-network/sgx-runtime", branch = "master"}
sp-io = { default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"], git = "https://github.com/integritee-network/sgx-runtime", branch = "master", optional = true }
substrate-api-client = { default-features = false, git = "https://github.com/scs/substrate-api-client", branch = "master" }
substrate-fixed = { package = "substrate-fixed", git = "https://github.com/encointer/substrate-fixed",tag = "v0.5.9"}

# mesalock
linked-hash-map = { git = "https://github.com/mesalock-linux/linked-hash-map-sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
log = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
serde = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/serde-json-sgx" }
yasna = { rev = "sgx_1.1.3", default-features = false, features = ["bit-vec", "num-bigint", "chrono", "mesalock_sgx"], git = "https://github.com/mesalock-linux/yasna.rs-sgx" }
rustls = { rev = "sgx_1.1.3", features = ["dangerous_configuration"], git = "https://github.com/mesalock-linux/rustls" }

# for attestation
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
base64 = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rust-base64-sgx" }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
httparse = { git = "https://github.com/integritee-network/httparse-sgx", branch = "sgx-experimental", features = ["mesalock_sgx"], default-features = false }
itertools = { version = "0.10.1",  default-features = false, features = []}
bit-vec = { version = "0.6",    default-features = false }
base58 = { rev = "sgx_1.1.3", package="rust-base58", git = "https://github.com/mesalock-linux/rust-base58-sgx", default-features = false, features=["mesalock_sgx"] }

cid = { git = "https://github.com/whalelephant/rust-cid", branch = "nstd", default-features = false }
multibase = { git = "https://github.com/whalelephant/rust-multibase", branch = "nstd", default-features = false }

# local deps
ita-stf = { path = "../app-libs/stf", default-features = false, features = ["sgx"] }
itc-tls-websocket-server = { path = "../core/tls-websocket-server", default-features = false, features = ["sgx"] }
itc-direct-rpc-server = { path = "../core/direct-rpc-server", default-features = false, features = ["sgx"]  }
itc-parentchain = { path = "../core/parentchain/parentchain-crate", default-features = false, features = ["sgx"] }
itp-block-import-queue = { path = "../core-primitives/block-import-queue", default-features = false, features = ["sgx"] }
itp-component-container = { path = "../core-primitives/component-container", default-features = false, features = ["sgx"] }
itp-extrinsics-factory = { path = "../core-primitives/extrinsics-factory", default-features = false, features = ["sgx"]}
itp-nonce-cache = { path = "../core-primitives/nonce-cache", default-features = false, features = ["sgx"] }
itp-ocall-api = { path = "../core-primitives/ocall-api", default-features = false }
itp-primitives-cache = { path = "../core-primitives/primitives-cache", default-features = false, features = ["sgx"] }
itp-time-utils = { path = "../core-primitives/time-utils", default-features = false, features = ["sgx"] }
itp-settings = { path = "../core-primitives/settings" }
itp-sgx-io = { path = "../core-primitives/sgx/io", default-features = false, features = ["sgx"] }
itp-storage = { path = "../core-primitives/storage", default-features = false, features = ["sgx"] }
itp-storage-verifier = { path = "../core-primitives/storage-verified", default-features = false }
itp-sgx-crypto = { path = "../core-primitives/sgx/crypto", default-features = false, features = ["sgx"] }
itp-stf-executor = { path = "../core-primitives/stf-executor", default-features = false, features = ["sgx"] }
itp-stf-state-handler = { path = "../core-primitives/stf-state-handler", default-features = false, features = ["sgx"] }
itp-teerex-storage = { path = "../core-primitives/teerex-storage", default-features = false }
itp-test = { path = "../core-primitives/test", default-features = false, optional = true }
itp-types = { path = "../core-primitives/types", default-features = false, features = ["sgx"] }
its-sidechain = { path = "../sidechain/sidechain-crate", default-features = false, features = ["sgx"] }
ita-exchange-oracle = { path = "../app-libs/exchange-oracle", default-features = false, features = ["sgx"] }

# substrate deps
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { version = "6.0.0", default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-finality-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-version = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-application-crypto = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

[patch.crates-io]
log = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
getrandom = { git = "https://github.com/integritee-network/getrandom-sgx", branch = "update-v2.3"}

[patch."https://github.com/paritytech/substrate"]
log = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
sp-io = { git = "https://github.com/integritee-network/sgx-runtime", branch = "master"}
#sp-io = { path = "../../sgx-runtime/substrate-sgx/sp-io"}

#[patch."https://github.com/integritee-network/sgx-runtime"]
#sgx-runtime = { path = "../../sgx-runtime/runtime", default-features = false}
#sp-io = { path = "../../sgx-runtime/substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
#sgx-externalities = { path = "../../sgx-runtime/substrate-sgx/externalities"}

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_tstd = { version = "1.1.4", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_alloc = { version = "1.1.4", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_libc = { version = "1.1.4", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_serialize = { version = "1.1.4", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_serialize_derive = { version = "1.1.4", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_serialize_derive_internals = { version = "1.1.4", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_trts = { version = "1.1.4", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_types = { version = "1.1.4", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_tcrypto = { version = "1.1.4", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_tcrypto_helper = { version = "1.1.4", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
sgx_crypto_helper = { version = "1.1.4", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}

#[patch."https://github.com/scs/substrate-api-client"]
#substrate-api-client = { path = "../../../scs/substrate-api-client" }

#[patch."https://github.com/integritee-network/pallets.git"]
#pallet-parentchain = { path = '../../pallets/parentchain' }