[package]
name = "substratee-worker-enclave"
version = "0.6.5-sub2.0.0-alpha.7"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[workspace]
members = [
    "chain_relay"
]

[lib]
name = "substratee_worker_enclave"
crate-type = ["staticlib"]

[features]
default = []
production = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tse       = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd      = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"] }
sgx_rand      = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts      = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types     = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal     = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto   = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
aes               = { version = "0.3.2" }
ofb               = { version = "0.1.1" }
codec             = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
primitive-types   = { version = "0.6", default-features = false, features = ["codec"] }
sgx-crypto-helper = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", package = "sgx_tcrypto_helper" }
log               = { version = "0.4", git = "https://github.com/mesalock-linux/log-sgx" }
env_logger        = { version = "0.7", git = "https://github.com/mesalock-linux/env_logger-sgx" }
serde        	  = { rev = "sgx_1.1.2", git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json        = { rev = "sgx_1.1.2", git = "https://github.com/mesalock-linux/serde-json-sgx"}
lazy_static       = { version = "1.1.0", features = ["spin_no_std"] }

# for attestation
chrono          = { version = "0.4.7",  git = "https://github.com/mesalock-linux/chrono-sgx" }
base64          = { version = "0.10", git = "https://github.com/mesalock-linux/rust-base64-sgx" }
num-bigint      = { version = "0.2", git = "https://github.com/mesalock-linux/num-bigint-sgx" }
serde_derive    = { version = "1.0", git = "https://github.com/mesalock-linux/serde-sgx" }
httparse        = { version = "1.3",  default-features = false }
itertools       = { version = "0.8",  default-features = false, features = []}
bit-vec         = { version = "0.6",    default-features = false }
base58          = { rev = "sgx_1.1.2", package="rust-base58", git = "https://github.com/mesalock-linux/rust-base58-sgx", default-features = false, features=["mesalock_sgx"] }

[dependencies.webpki]
git              = "https://github.com/mesalock-linux/webpki"
branch           = "mesalock_sgx"
version          = "0.21.0"

[dependencies.webpki-roots]
git              = "https://github.com/mesalock-linux/webpki-roots"
branch           = "mesalock_sgx"
version          = "0.19.0"

[dependencies.yasna]
git      = "https://github.com/mesalock-linux/yasna.rs-sgx"
rev      = "sgx_1.1.2"
default-features = false
features = ["bit-vec", "num-bigint", "chrono", "mesalock_sgx"]

[dependencies.rustls]
git      = "https://github.com/mesalock-linux/rustls"
rev      = "sgx_1.1.2"
features = ["dangerous_configuration"]

[dependencies.sp-io]
git = "https://github.com/scs/sgx-runtime"
tag = "v2.0.0-alpha.7"
default-features = false
optional = true
package = "sp-io"
features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]

[dependencies.sgx_serialize_derive]
git = "https://github.com/apache/teaclave-sgx-sdk.git"
rev = "v1.1.2"

[dependencies.sp-core]
version = '2.0.0-alpha.7'
default-features = false
features = ["full_crypto"]

[dependencies.sp-finality-grandpa]
version = "2.0.0-alpha.7"
default-features = false

[dependencies.sp-runtime]
version = '2.0.0-alpha.7'
default-features = false

[dependencies.sp-std]
version = '2.0.0-alpha.7'
default-features = false

[dependencies.substrate-api-client]
git = "https://github.com/scs/substrate-api-client"
tag = "v0.4.6-sub2.0.0-alpha.7"
default-features = false
features = ["full_crypto"]

[dependencies.chain-relay]
path = "chain_relay"

[dependencies.substratee-stf]
path = "../stf"
default-features = false
features = ["sgx"]

[dependencies.sgx-externalities]
git = "https://github.com/scs/sgx-runtime"
default-features = false

[dependencies.substratee-node-primitives]
path = "../substratee-node-primitives"
default-features = false
features = ["sgx"]

[patch.crates-io]
sp-io = { git = "https://github.com/scs/sgx-runtime", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
