cargo-features = ["resolver"]

[package]
name = "substratee-worker-enclave"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"
resolver = "2"

[workspace]
members = [
    "chain_relay"
]

[lib]
name = "substratee_worker_enclave"
crate-type = ["staticlib"]

[features]
default = []
production = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tse       = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd      = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs","net","backtrace"] }
sgx_rand      = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts      = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types     = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tseal     = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto   = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies]
aes               = { version = "0.3.2" }
ofb               = { version = "0.1.1" }
codec             = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
primitive-types   = { version = "0.9.0", default-features = false, features = ["codec", "serde_no_std"] }
sgx-crypto-helper = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", package = "sgx_tcrypto_helper" }
log               = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger        = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
serde        	  = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json        = { git = "https://github.com/mesalock-linux/serde-json-sgx"}
lazy_static       = { version = "1.1.0", features = ["spin_no_std"] }
retain_mut        = { version = "0.1.2"}
derive_more       = { version = "0.99.5" }
byteorder         = { version = "1.4.2", default-features = false}


# for attestation
chrono          = { git = "https://github.com/mesalock-linux/chrono-sgx" }
base64          = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rust-base64-sgx" }
num-bigint      = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
serde_derive    = { git = "https://github.com/mesalock-linux/serde-sgx" }
httparse        = { version = "1.3",  default-features = false }
itertools       = { version = "0.8",  default-features = false, features = []}
bit-vec         = { version = "0.6",    default-features = false }
base58          = { rev = "sgx_1.1.3", package="rust-base58", git = "https://github.com/mesalock-linux/rust-base58-sgx", default-features = false, features=["mesalock_sgx"] }

cid = { git = "https://github.com/whalelephant/rust-cid", branch = "nstd", default-features = false }
multibase = { git = "https://github.com/whalelephant/rust-multibase", branch = "nstd", default-features = false }

[dependencies.linked-hash-map]
git              = "https://github.com/mesalock-linux/linked-hash-map-sgx"


[dependencies.webpki]
git              = "https://github.com/mesalock-linux/webpki"
branch           = "mesalock_sgx"

[dependencies.webpki-roots]
git              = "https://github.com/mesalock-linux/webpki-roots"
branch           = "mesalock_sgx"

[dependencies.yasna]
git      = "https://github.com/mesalock-linux/yasna.rs-sgx"
rev      = "sgx_1.1.3"
default-features = false
features = ["bit-vec", "num-bigint", "chrono", "mesalock_sgx"]

[dependencies.rustls]
git      = "https://github.com/mesalock-linux/rustls"
rev      = "sgx_1.1.3"
features = ["dangerous_configuration"]

[dependencies.sp-io]
git = "https://github.com/scs/sgx-runtime"
branch = "substrate-v3-update-v2"
default-features = false
optional = true
features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]

[dependencies.sgx_serialize_derive]
git = "https://github.com/apache/teaclave-sgx-sdk.git"
rev = "v1.1.3"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"
default-features = false
features = ["full_crypto"]

[dependencies.sp-finality-grandpa]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"
default-features = false

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"
default-features = false

[dependencies.sp-std]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"
default-features = false

[dependencies.sp-utils]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"
default-features = false

[dependencies.sp-version]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"
default-features = false

[dependencies.substrate-api-client]
git = "https://github.com/scs/substrate-api-client"
tag = "v0.5.0"
default-features = false
#features = ["full_crypto"]

[dependencies.chain-relay]
path = "chain_relay"

[dependencies.substratee-stf]
path = "../stf"
default-features = false
features = ["sgx"]

[dependencies.sgx-externalities]
git = "https://github.com/scs/sgx-runtime"
branch = "substrate-v3-update-v2"
default-features = false

[dependencies.substratee-node-primitives]
path = "../substratee-node-primitives"
default-features = false
features = ["sgx"]

[dependencies.substratee-worker-primitives]
path = "../substratee-worker-primitives"
default-features = false
features = ["sgx"]

[dependencies.ipfs-unixfs]
git = "https://github.com/whalelephant/rust-ipfs"
branch = "w-nstd"
default-features = false

[dependencies.jsonrpc-core]
git = "https://github.com/scs/jsonrpc"
branch = "no_std_version_update"
default-features = false

[dependencies.sp-application-crypto]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"
default-features = false

[patch.crates-io]
log = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", default-features = false, features = ["mesalock_sgx"] }
#serde = { git = "https://github.com/mesalock-linux/serde-sgx", default-features = false, features = ["mesalock_sgx"]}
#serde_json = {git = "https://github.com/mesalock-linux/serde-json-sgx", default-features = false, features = ["alloc", "mesalock_sgx"]}

[patch."https://github.com/paritytech/substrate"]
log = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", default-features = false, features = ["mesalock_sgx"] }
#sp-io = { path = "../../sgx-runtime/substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
sp-io = {git = "https://github.com/scs/sgx-runtime", branch = "substrate-v3-update-v2", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
